2007-07-19  Lillian Angel  <langel@redhat.com>

	* .hgignore: Ignore .* directories/files.

2007-07-19  Lillian Angel  <langel@redhat.com>

	* jce/gnu/javax/crypto/jce/GnuCrypto.java: Fixed typo. DiffieHellman
	is now recognized as a algorithm.

2007-07-18  Casey Marshall  <csm@gnu.org>

	Fixes PR 39.
	* jce/gnu/java/security/icedtea/CertBundleKeyStoreImpl.java:
	new file.
	* jce/gnu/java/security/icedtea/IcedTls.java: add
	`CertBundleKeyStoreImpl' to provider.
	
2007-07-18  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* configure.ac: Bump version to 1.2.
	* configure: Regenerate.

2007-07-18  Francis Kung  <fkung@redhat.com>

	* INSTALL: Add instructions for enabling graphics.

2007-07-18  Francis Kung  <fkung@redhat.com>

	* patches/icedtea-graphics.patch: Check for null scalers.

2007-07-18  Lillian Angel  <langel@redhat.com>

	* jce/gnu/javax/crypto/jce/PBESecretKeyFactory.java: Reformatted (GNU
	style).
	* jce/gnu/javax/crypto/jce/cipher/PBE.java: Likewise.
	* jce/gnu/javax/crypto/key/GnuPBEKey.java: Likewise.

2007-07-18  Lillian Angel  <langel@redhat.com>

	* jce/gnu/javax/crypto/jce/GnuCrypto.java: Added PBEWithMD5AndDES and
	PBE providers.
	* jce/gnu/javax/crypto/jce/cipher/CipherAdapter.java: 
	(engineUpdate): Fixed blockCount and buffer size.
	(engineUpdate): Fixed blockCount.
	* jce/gnu/javax/crypto/key/GnuPBEKey.java
	(getFormat): Implemented.
	(getEncoded): Implemented.
	* jce/gnu/javax/crypto/jce/PBESecretKeyFactory.java: New file.
	* jce/gnu/javax/crypto/jce/cipher/PBE.java: New file.

2007-07-18  Francis Kung  <fkung@redhat.com>

	* patches/icedtea-graphics.patch: Patch OpenJDK makefiles.

2007-07-17  Francis Kung  <fkung@redhat.com>

	* Makefile.am: Fix compile flags for Freetype.
	* Makefile.in: Regenerated.
	* patches/icedtea-graphics.patch: Patch OpenJDK makefiles for
	Freetype support.

2007-07-17  Francis Kung  <fkung@redhat.com>

	* Makefile.am: Add compile flags for Freetype.
	* acinclude.m4: Fix check for Freetype.